Add unicode external link

--- a/config.yaml
+++ b/config.yaml
@@ -44,7 +44,7 @@ params:
       url: https://learn.scientific-python.org/contributors/
     - title: Maintainer Guide
       url: https://learn.scientific-python.org/maintainers/
-    - title: Discussion Forum
+    - title: "Discussion Forum\u29C9"
       url: https://discuss.scientific-python.org/
 
   hero:
