--- a/config.yaml
+++ b/config.yaml
@@ -44,7 +44,7 @@ params:
       url: https://learn.scientific-python.org/contributors/
     - title: Maintainer Guide
       url: https://learn.scientific-python.org/maintainers/
-    - title: "Discussion Forum\u2197"
+    - title: "\u2197 Discussion Forum"
       url: https://discuss.scientific-python.org/
 
   hero:
