--- a/config.yaml
+++ b/config.yaml
@@ -44,8 +44,9 @@ params:
       url: https://learn.scientific-python.org/contributors/
     - title: Maintainer Guide
       url: https://learn.scientific-python.org/maintainers/
-    - title: "Discussion Forum \u2197"
+    - title: Discussion Forum
       url: https://discuss.scientific-python.org/
+      is_external: true
 
   hero:
     # Main hero title
