--- a/calendars/matplotlib.yaml
+++ b/calendars/matplotlib.yaml
@@ -17,3 +17,22 @@ events:
         # seconds, minutes, hours, days, weeks, months, years
         days: 7
       until: 2025-01-01 00:00:00
+
+timezone: Europe/Berlin
+events:
+  - summary: Monthly Matplotlib New Contributor Meeting
+    description: |
+      The monthly call for new contributors to the Matplotlib project 🎉
+
+      All are welcome.
+
+      Meeting notes: https://hackmd.io/@matplotlib
+
+    begin: 2022-05-10 19:00:00
+    end: 2022-05-10 20:00:00
+    url: https://us06web.zoom.us/j/81285851006?pwd=Tks2QjRkNWh5NGw0TmU1RUwwOVluZz09
+    repeat:
+      interval:
+        # seconds, minutes, hours, days, weeks, months, years
+        days: 28
+      until: 2025-01-01 00:00:00 +00:00
