--- a/calendars/matplotlib.yaml
+++ b/calendars/matplotlib.yaml
@@ -33,5 +33,5 @@ events:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
         days: 28
-      until: 2025-01-01 00:00:00 +00:00
+      until: 2025-01-01 00:00:00
 
