--- a/calendars/scipy.yaml
+++ b/calendars/scipy.yaml
@@ -27,3 +27,20 @@ events:
         # seconds, minutes, hours, days, weeks, months, years
         days: 28
       until: 2025-01-01 00:00:00 +00:00
+
+- summary: Monthly SciPy New Contributor Meeting
+    description: |
+      The monthly call for new contributors to SciPy 🎉
+
+      All are welcome.
+
+      Meeting notes: https://hackmd.io/@melissawm/H15ahr5wq
+
+    begin: 2022-05-27 19:00:00
+    end: 2022-05-27 20:00:00
+    url: https://us06web.zoom.us/j/6345425936?pwd=aDVFQzVmbk9SVU5jU0Jwc0s3YWUrdz09
+    repeat:
+      interval:
+        # seconds, minutes, hours, days, weeks, months, years
+        days: 28
+      until: 2025-01-01 00:00:00
