Minor update of a triage meeting description

--- a/calendars/numpy.yaml
+++ b/calendars/numpy.yaml
@@ -22,8 +22,8 @@ events:
       A fortnightly meeting to synchronously triage prioritized PRs and issues.
       Everyone is welcome to attend and contribute to a conversation.
       
-      Please notify us of issues or PRs that you’d like to have reviewed by adding
-      a GitHub link to them in the meeting agenda: https://hackmd.io/68i_JvOYQfy9ERiHgXMPvg
+      Please notify us of an issue or PR that you’d like to have triaged/reviewed by adding
+      a GitHub link to it in the meeting agenda: https://hackmd.io/68i_JvOYQfy9ERiHgXMPvg
     begin: 2022-03-23 16:00:00 +00:00
     end: 2022-03-23 17:00:00 +00:00
     url: https://berkeley.zoom.us/j/762261535
