--- a/calendars/networkx.yaml
+++ b/calendars/networkx.yaml
@@ -5,6 +5,7 @@ events:
     description: |
       The NetworkX Community Call.
 
+      Meeting Link:  https://colgate.zoom.us/j/92619161786
       Meeting notes: https://hackmd.io/ea2IhUuqSrG4kM9tokXuEw
     begin: 2022-06-09 10:00:00
     end: 2022-06-09 11:00:00
