Update descriptions of NumPy community meetings (#250)
* Update descriptions of NumPy community events

* Minor update of a triage meeting description

* Run linter

Co-authored-by: Jarrod Millman <jarrod.millman@gmail.com>

--- a/calendars/numpy.yaml
+++ b/calendars/numpy.yaml
@@ -2,9 +2,12 @@ name: NumPy Community Calendar
 events:
   - summary: NumPy Community Call
     description: |
-      The fortnightly NumPy community call.
+      A fortnightly meeting to share updates on everything
+      that is happening in the NumPy community. Everyone is welcome
+      to attend and contribute to a conversation.
 
-      Meeting notes: https://hackmd.io/76o-IxCjQX2mOXO_wwkcpg
+      To add to the meeting agenda the topics you’d like to discuss,
+      follow the link: https://hackmd.io/76o-IxCjQX2mOXO_wwkcpg
     begin: 2022-01-19 18:00:00 +00:00
     end: 2022-01-19 19:00:00 +00:00
     url: https://berkeley.zoom.us/j/762261535
@@ -16,9 +19,11 @@ events:
 
   - summary: NumPy Triage Call
     description: |
-      The fortnightly NumPy development triage call.
+      A fortnightly meeting to synchronously triage prioritized PRs and issues.
+      Everyone is welcome to attend and contribute to a conversation.
 
-      Meeting notes: https://hackmd.io/68i_JvOYQfy9ERiHgXMPvg
+      Please notify us of an issue or PR that you’d like to have triaged/reviewed by adding
+      a GitHub link to it in the meeting agenda: https://hackmd.io/68i_JvOYQfy9ERiHgXMPvg
     begin: 2022-03-23 16:00:00 +00:00
     end: 2022-03-23 17:00:00 +00:00
     url: https://berkeley.zoom.us/j/762261535
@@ -30,9 +35,12 @@ events:
 
   - summary: NumPy Documentation Team meeting
     description: |
-      The fortnightly NumPy documentation team call.
+      A fortnightly meeting to discuss everything related
+      to the official NumPy documentation. Everyone is welcome to attend
+      and contribute to a conversation.
 
-      Meeting notes: https://hackmd.io/oB_boakvRqKR-_2jRV-Qjg
+      To add to the meeting agenda the topics you’d like to discuss,
+      follow the link: https://hackmd.io/oB_boakvRqKR-_2jRV-Qjg
     begin: 2022-01-17 16:00:00 +00:00
     end: 2022-01-17 17:00:00 +00:00
     url: https://zoom.us/j/96219574921?pwd=VTRNeGwwOUlrYVNYSENpVVBRRjlkZz09
@@ -42,10 +50,12 @@ events:
         days: 14
       until: 2025-01-01 00:00:00 +00:00
 
-  - summary: NumPy Newcomers meeting
+  - summary: NumPy Newcomers Hour
     description: |
-      The fortnightly NumPy call for newcomers.
+      A fortnightly meeting for newcomers to the NumPy contributor community.
 
+      To add to the meeting agenda the topics you’d like to discuss,
+      follow the link: https://hackmd.io/3f3otyyuTte3FU9y3QzsLg
     begin: 2022-02-10 16:00:00 +00:00
     end: 2022-02-10 17:00:00 +00:00
     url: https://us02web.zoom.us/j/87192457898
