--- a/calendars/networkx.yaml
+++ b/calendars/networkx.yaml
@@ -7,8 +7,8 @@ events:
 
       Meeting Link:  https://colgate.zoom.us/j/92619161786
       Meeting notes: https://hackmd.io/ea2IhUuqSrG4kM9tokXuEw
-    begin: 2022-06-09 10:00:00
-    end: 2022-06-09 11:00:00
+    begin: 2022-06-09 17:00:00 +00:00
+    end: 2022-06-09 18:00:00 +00:00
     url: https://colgate.zoom.us/j/92619161786
     repeat:
       interval:
