--- a/calendars/skimage.yaml
+++ b/calendars/skimage.yaml
@@ -1,27 +1,26 @@
 name: scikit-image Community Calendar
-timezone: America/Los_Angeles
 events:
   - summary: scikit-image Community Call (Europe/Africa)
     description: |
       The scikit-image Community Call. Timezone-friendly for Europe/Africa.
 
       Meeting notes: https://hackmd.io/@alexdesiqueira/skimage_cc
-    begin: 2022-06-14 10:00:00
-    end: 2022-06-14 11:00:00
+    begin: 2022-06-14 17:00:00 +00:00
+    end: 2022-06-14 18:00:00 +00:00
     url: https://berkeley.zoom.us/j/4760246500?pwd=dC9jVVB0ZzlHT0VpdlBkc21oYmVUQT09
     repeat:
       interval:
         days: 14
-      until: 2025-01-01 00:00:00
+      until: 2025-01-01 00:00:00 +00:00
   - summary: scikit-image Community Call (Americas/Oceania)
     description: |
       The scikit-image Community Call. Timezone-friendly for Americas/Oceania.
 
       Meeting notes: https://hackmd.io/@alexdesiqueira/skimage_cc
-    begin: 2022-06-21 15:00:00
-    end: 2022-06-21 16:00:00
+    begin: 2022-06-21 22:00:00 +00:00
+    end: 2022-06-21 23:00:00 +00:00
     url: https://berkeley.zoom.us/j/4760246500?pwd=dC9jVVB0ZzlHT0VpdlBkc21oYmVUQT09
     repeat:
       interval:
         days: 14
-      until: 2025-01-01 00:00:00
+      until: 2025-01-01 00:00:00 +00:00
