--- a/calendars/scipy.yaml
+++ b/calendars/scipy.yaml
@@ -43,4 +43,4 @@ events:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
         days: 28
-      until: 2025-01-01 00:00:00
+      until: 2025-01-01 00:00:00 +00:00
