--- a/calendars/numpy.yaml
+++ b/calendars/numpy.yaml
@@ -39,10 +39,10 @@ events:
       to the official NumPy documentation. Everyone is welcome to attend
       and contribute to a conversation.
 
-      To add to the meeting agenda the topics you’d like to discuss,
+      To add to the meeting agenda the topics you'd like to discuss,
       follow the link: https://hackmd.io/oB_boakvRqKR-_2jRV-Qjg
-    begin: 2022-01-17 16:00:00 +00:00
-    end: 2022-01-17 17:00:00 +00:00
+    begin: 2022-07-18 14:00:00 +00:00
+    end: 2022-07-18 15:00:00 +00:00
     url: https://zoom.us/j/96219574921?pwd=VTRNeGwwOUlrYVNYSENpVVBRRjlkZz09
     repeat:
       interval:
