--- a/calendars/sunpy.yaml
+++ b/calendars/sunpy.yaml
@@ -3,7 +3,7 @@ events:
   - summary: Weekly SunPy Community Call
     description: |
       The weekly call for the SunPy community.
-      Agenda: https://demo.hedgedoc.org/GAEnxycXQcCQLrAFN7ie8A?edit
+      Agenda: https://sunpy.org/community_meeting_agenda
     begin: 2022-07-20 16:00:00 +00:00
     end: 2022-07-20 17:00:00 +00:00
     url: https://sunpy.org/jitsi
