--- a/calendars/poliastro.yaml
+++ b/calendars/poliastro.yaml
@@ -1,8 +1,8 @@
 name: poliastro Community Calendar
 events:
-  - summary: Weekly poliastro community call
+  - summary: Monthly poliastro community call
     description: |
-      The weekly call for the poliastro community.
+      The monthly call for the poliastro community.
       Meeting notes: https://hackmd.io/@juanlu/r1WFmgXSu/edit
     begin: 2022-08-03 11:00:00 +00:00
     end: 2022-08-03 12:00:00 +00:00
