--- a/calendars/skimage.yaml
+++ b/calendars/skimage.yaml
@@ -4,7 +4,7 @@ events:
     description: |
       The scikit-image Community Call. Timezone-friendly for Europe/Africa.
 
-      Meeting notes: https://image.etherpad.com/p/skimage_cc
+      Meeting notes: https://hackmd.io/@alexdesiqueira/skimage_cc
       Archive — Meeting Notes: https://github.com/scikit-image/meeting-notes
     begin: 2022-06-14 17:00:00 +00:00
     end: 2022-06-14 18:00:00 +00:00
@@ -17,7 +17,7 @@ events:
     description: |
       The scikit-image Community Call. Timezone-friendly for Americas/Oceania.
 
-      Meeting notes: https://image.etherpad.com/p/skimage_cc
+      Meeting notes: https://hackmd.io/@alexdesiqueira/skimage_cc
       Archive — Meeting Notes: https://github.com/scikit-image/meeting-notes
     begin: 2022-06-21 22:00:00 +00:00
     end: 2022-06-21 23:00:00 +00:00
