--- a/config.yaml
+++ b/config.yaml
@@ -113,10 +113,10 @@ params:
       column2:
         title: "Maintainers"
         links:
+          - text: Summits
+            link: /summits/
           - text: SPECs
             link: /specs/
-          - text: Grants
-            link: /grants/
           - text: Calendars
             link: /calendars
       column3:
