--- a/.github/ISSUE_TEMPLATE/discuss.yml
+++ b/.github/ISSUE_TEMPLATE/discuss.yml
@@ -1,5 +1,5 @@
-name: Create New Discourse Category
-description: Request a new category for our discourse forum (https://discuss.scientific-python.org/)
+name: Discourse Category
+about: Request a new category for our discourse forum (https://discuss.scientific-python.org/).
 labels: ["discourse"]
 
 body:
@@ -11,6 +11,6 @@ body:
       value: Before continuing, you may want to review the difference between [categories and tags](https://blog.discourse.org/2017/10/its-time-we-talked-about-tags/).
   - type: textarea
     attributes:
-      label: Describe your issue.
+      label: Describe the purpose of the new category.
     validations:
       required: true
