Reorder issue templates

--- a/.github/ISSUE_TEMPLATE/09-discuss.yml
+++ b/.github/ISSUE_TEMPLATE/09-discuss.yml
@@ -1,4 +1,4 @@
-name: New Discourse Category
+name: Discourse Category
 description: Request a new category for our discourse forum (https://discuss.scientific-python.org/).
 labels: ["discourse"]
 
