--- a/calendars/numpy.yaml
+++ b/calendars/numpy.yaml
@@ -50,7 +50,7 @@ events:
         days: 14
       until: 2025-01-01 00:00:00 +00:00
 
-  - summary: NumPy Newcomers Hour
+  - summary: NumPy Newcomers' Hour
     description: |
       A fortnightly meeting for newcomers to the NumPy contributor community.
 
@@ -58,7 +58,7 @@ events:
       follow the link: https://hackmd.io/3f3otyyuTte3FU9y3QzsLg
     begin: 2022-02-10 14:00:00 +00:00
     end: 2022-02-10 15:00:00 +00:00
-    url: https://us02web.zoom.us/j/87192457898
+    url: https://us06web.zoom.us/j/82563808729?pwd=ZFU3Z2dMcXBGb05YemRsaGE1OW5nQT09
     repeat:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
