--- a/calendars/skimage.yaml
+++ b/calendars/skimage.yaml
@@ -4,8 +4,8 @@ events:
     description: |
       The scikit-image Community Call. Timezone-friendly for Europe/Africa.
 
-      Meeting notes: https://hackmd.io/@alexdesiqueira/skimage_cc
-      Archive — Meeting Notes: https://github.com/scikit-image/meeting-notes
+      Meeting notes: https://hackmd.io/@scientific-python/HJWUBDVNi
+      Archive: https://github.com/scikit-image/meeting-notes
     begin: 2022-09-13 17:00:00 +00:00
     end: 2022-09-13 18:00:00 +00:00
     url: https://us06web.zoom.us/j/88060567580?pwd=THRpaWFnSFNwK0Fycy9FVk5RYnV5UT09
@@ -17,11 +17,11 @@ events:
     description: |
       The scikit-image Community Call. Timezone-friendly for Americas/Oceania.
 
-      Meeting notes: https://hackmd.io/@alexdesiqueira/skimage_cc
-      Archive — Meeting Notes: https://github.com/scikit-image/meeting-notes
-    begin: 2022-09-20 22:00:00 +00:00
-    end: 2022-09-20 23:00:00 +00:00
-    url: https://us06web.zoom.us/j/89135215899?pwd=ck8xRGg1SVNEWmlGMjlSd1BiOVZtZz09
+      Meeting notes: https://hackmd.io/@scientific-python/HJWUBDVNi
+      Archive: https://github.com/scikit-image/meeting-notes
+    begin: 2022-09-20 23:00:00 +00:00
+    end: 2022-09-21 00:00:00 +00:00
+    url: https://us06web.zoom.us/j/88060567580?pwd=THRpaWFnSFNwK0Fycy9FVk5RYnV5UT09
     repeat:
       interval:
         days: 14
