--- a/config.yaml
+++ b/config.yaml
@@ -38,14 +38,8 @@ params:
       url: /
     - title: Blog
       url: https://blog.scientific-python.org/
-    #- title: User Guide
-    #  url: https://learn.scientific-python.org/users/
-    #- title: Contributor Guide
-    #  url: https://learn.scientific-python.org/contributors/
-    #- title: Maintainer Guide
-    #  url: https://learn.scientific-python.org/maintainers/
     - title: SPECs
-      url: /specs/
+      url: https://specs.scientific-python.org/
 
   hero:
     # Main hero title
