--- a/calendars/matplotlib.yaml
+++ b/calendars/matplotlib.yaml
@@ -18,7 +18,7 @@ events:
         days: 7
       until: 2025-01-01 00:00:00
 
-  - summary: Matplotlib Monthly New Contributor Meeting
+  - summary: Matplotlib Monthly New Contributors Meeting
     description: |
       The monthly call for new contributors to the Matplotlib project 🎉
 
@@ -26,8 +26,8 @@ events:
 
       Meeting notes: https://hackmd.io/@matplotlib
 
-    begin: 2022-09-06 19:00:00
-    end: 2022-09-06 20:00:00
+    begin: 2022-12-06 19:00:00
+    end: 2022-12-06 20:00:00
     url: https://us06web.zoom.us/j/81285851006?pwd=Tks2QjRkNWh5NGw0TmU1RUwwOVluZz09
     repeat:
       interval:
