--- a/calendars/matplotlib.yaml
+++ b/calendars/matplotlib.yaml
@@ -29,5 +29,4 @@ events:
     begin: 2022-12-06 19:00:00
     end: 2022-12-06 20:00:00
     url: https://us06web.zoom.us/j/81285851006?pwd=Tks2QjRkNWh5NGw0TmU1RUwwOVluZz09
-    ics: |
-      RRULE:FREQ=MONTHLY;BYDAY=1WE
+    ics: RRULE:FREQ=MONTHLY;BYDAY=1WE
