--- a/calendars/contributor-experience.yaml
+++ b/calendars/contributor-experience.yaml
@@ -1,6 +1,6 @@
 name: Contributor Experience Project Community Calendar
 events:
-  - summary: Contributor Experience Project Community Call
+  - summary: Contributor Experience Project Community Call (Africa/Asia/Europe/Oceania)
     description: |
       A bi-weekly meeting to discuss everything related to contributor experience. Everyone is welcome to attend and contribute to a conversation.
     begin: 2022-10-31 09:00:00 +00:00
@@ -10,7 +10,7 @@ events:
       interval:
         days: 7
       until: 2025-01-01 00:00:00 +00:00
-  - summary: Contributor Experience Project Community Call
+  - summary: Contributor Experience Project Community Call (Americas)
     description: |
       A bi-weekly meeting to discuss everything related to contributor experience. Everyone is welcome to attend and contribute to a conversation.
     begin: 2022-11-11 15:00:00 +00:00
