Update NX meeting time for DST (#348)

--- a/calendars/networkx.yaml
+++ b/calendars/networkx.yaml
@@ -1,4 +1,5 @@
 name: NetworkX Community Calendar
+timezone: US/Pacific
 events:
   - summary: NetworkX Community Call (Americas/Oceania)
     description: |
@@ -6,10 +7,10 @@ events:
 
       Meeting Link:  https://colgate.zoom.us/j/92619161786
       Meeting notes: https://hackmd.io/ea2IhUuqSrG4kM9tokXuEw
-    begin: 2022-09-13 17:00:00 +00:00
-    end: 2022-09-13 18:00:00 +00:00
+    begin: 2022-09-13 10:00:00
+    end: 2022-09-13 11:00:00
     url: https://colgate.zoom.us/j/92619161786
     repeat:
       interval:
         days: 7
-      until: 2025-08-26 00:00:00 +00:00
+      until: 2025-08-26 00:00:00
