--- a/calendars/scipy.yaml
+++ b/calendars/scipy.yaml
@@ -28,28 +28,40 @@ events:
         days: 28
       until: 2025-01-01 00:00:00 +00:00
 
-  - summary: CANCELED - SciPy Community Call (Americas)
-    description: |
-      This meeting has been canceled. The next SciPy Community call will be held
-      on January 11, 2023.
-
-      Meeting notes: https://hackmd.io/pyhudrC5TgSwdJtpPldHgQ
-    begin: 2022-12-28 20:00:00 +00:00
-    end: 2022-12-28 21:00:00 +00:00
-
-  - summary: Monthly SciPy New Contributor Meeting
+  - summary: Monthly SciPy New Contributor Meeting (Europe/Asia)
     description: |
       The monthly call for new contributors to SciPy 🎉
+
+      This is the Europe/Asia-friendly meeting.
 
       All are welcome.
 
       Meeting notes: https://hackmd.io/@melissawm/H15ahr5wq
 
-    begin: 2022-12-09 12:00:00 +00:00
-    end: 2022-12-09 13:00:00 +00:00
+    begin: 2023-03-31 12:00:00 +00:00
+    end: 2023-03-31 13:00:00 +00:00
     url: https://us06web.zoom.us/j/89085469494?pwd=dVFwK3dVczRyRUowZWZkckFtTmloUT09
     repeat:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
-        days: 28
+        days: 56
+      until: 2025-01-01 00:00:00 +00:00
+
+  - summary: Monthly SciPy New Contributor Meeting (Americas)
+    description: |
+      The monthly call for new contributors to SciPy 🎉
+
+      This is the Americas-friendly meeting.
+
+      All are welcome.
+
+      Meeting notes: https://hackmd.io/@melissawm/H15ahr5wq
+
+    begin: 2023-03-03 20:00:00 +00:00
+    end: 2023-03-03 21:00:00 +00:00
+    url: https://us06web.zoom.us/j/89085469494?pwd=dVFwK3dVczRyRUowZWZkckFtTmloUT09
+    repeat:
+      interval:
+        # seconds, minutes, hours, days, weeks, months, years
+        days: 56
       until: 2025-01-01 00:00:00 +00:00
