--- a/calendars/contributor-experience.yaml
+++ b/calendars/contributor-experience.yaml
@@ -2,7 +2,7 @@ name: Contributor Experience Project Community Calendar
 events:
   - summary: Contributor Experience Project Community Call
     description: |
-      A weekly meeting to discuss everything related to contributor experience. Everyone is welcome to attend and contribute to a conversation. On Zoom: https://numfocus-org.zoom.us/j/81082067424?pwd=bVNqWXhqSXZEdTl6ZzFsa1lJZ08xZz09
+      A weekly meeting to discuss everything related to contributor experience. Everyone is welcome to attend and contribute to a conversation.
     begin: 2023-03-30 13:00:00 +00:00
     end: 2023-03-30 14:00:00 +00:00
     url: https://numfocus-org.zoom.us/j/81082067424?pwd=bVNqWXhqSXZEdTl6ZzFsa1lJZ08xZz09
