--- a/config.yaml
+++ b/config.yaml
@@ -49,6 +49,9 @@ params:
     #  url: https://learn.scientific-python.org/maintainers/
     - title: SPECs
       url: /specs/
+    - title: BOT
+      url: /bot/
+
 
   hero:
     # Main hero title
