Bot metric page.  (#396)
* Move the metrics page to scientific Python

* rerun prettier

--- a/config.yaml
+++ b/config.yaml
@@ -49,6 +49,8 @@ params:
     #  url: https://learn.scientific-python.org/maintainers/
     - title: SPECs
       url: /specs/
+    - title: BOT
+      url: /bot/
 
   hero:
     # Main hero title
