--- a/calendars/sparse-array.yaml
+++ b/calendars/sparse-array.yaml
@@ -1,5 +1,5 @@
 name: Sparse Arrays Group
-timezone: CEST
+timezone: UTC
 events:
   - summary: Sparse Array discussions
     description: |
@@ -8,8 +8,8 @@ events:
 
       Meeting Link:  https://meet.google.com/qvk-bydd-tem
       Meeting notes: https://hackmd.io/9UCjKdRUTEeoS8KdQNll-A
-    begin: 2023-06-17 13:00:00
-    end: 2023-06-17 14:00:00
+    begin: 2023-07-07 14:00:00
+    end: 2023-07-07 15:00:00
     url: https://meet.google.com/qvk-bydd-tem
     repeat:
       interval:
