Update the Zoom link for NumPy Optimization team meetings

--- a/calendars/numpy.yaml
+++ b/calendars/numpy.yaml
@@ -65,7 +65,7 @@ events:
       To add to the meeting agenda the topics you'd like to discuss,
       follow the link: https://hackmd.io/dVdSlQ0TThWkOk0OkmGsmw
 
-      Join us via Zoom: https://numfocus-org.zoom.us/j/88162122074?pwd=a3h0cTZubzlLcTZzMVhCL1AxUVFMdz09
+      Join us via Zoom: https://numfocus-org.zoom.us/j/81261288210?pwd=iwV99tGSjR61RTGEERKM4QKxe46g1n.1
     begin: 2023-11-20 17:00:00 +00:00
     end: 2023-11-20 18:00:00 +00:00
     url: https://numfocus-org.zoom.us/j/88162122074?pwd=a3h0cTZubzlLcTZzMVhCL1AxUVFMdz09
